fixed sidebar on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,3 +12,10 @@
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#sidebar-control-collapsed {
+    left: 10px;
+    bottom: 10px;
+    display: none;
+    z-index: 100000;
+}
